# RustRayTracer

./: Cargo.toml  README.md
gallery/code/: 1_sphere_and_basic_lights.rs  2_spheres_and_triangle.rs  3_sphere_triangle_ambientOccluder.rs  4_primitive_geom_objects.rs  5_kdtree_obj.rs  6_various_materials.rs  7_reflective.rs  8_multithread.rs
src/: lib.rs  main.rs
src/brdf/: fresnelreflector.rs  fresneltransmitter.rs  glossyspec.rs  lambertian.rs  mod.rs  perfectspec.rs  perfecttransmitter.rs
src/camera/: mod.rs  pinhole.rs
src/geometry/: bbox.rs  cuboid.rs  instance.rs  kdtree.rs  kdtree_backup.rs  meshtriangle.rs  mod.rs  sphere.rs  triangle.rs  trimesh.rs
src/light/: ambient.rs  ambientocc.rs  arealight.rs  directional.rs  mod.rs  pointlight.rs
src/material/: dielectric.rs  emissive.rs  glossyreflector.rs  matte.rs  mod.rs  phong.rs  reflective.rs  reflector.rs
src/math/: constants.rs  float_cmp.rs  mod.rs  polynomial.rs
src/output/: imagewriter.rs  mod.rs
src/ray/: mod.rs
src/render/: mod.rs  renderbuffer.rs  renderdata.rs
src/render/cam/: mod.rs  pinhole.rs
src/sampler/: Jittered.rs  dummy.rs  jittered.rs  mod.rs  mutijittered.rs  nrooks.rs
src/tracer/: arealighting.rs  mod.rs  raycast.rs  whitted.rs
src/utils/: color.rs  colorconstant.rs  computequeue.rs  mod.rs  multithread.rs  shaderec.rs
src/world/: mod.rs  shaderec.rs  viewplane.rs  world.rs
