[package]
name = "raytracer"
version = "0.1.0"
authors = ["ChinYing-Li <chinying.li@mail.utoronto.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-set = "0.0.8"
image = "0.23.7"
rand = "0.7.3"
cgmath = "0.17.0"
